--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@
 
 /*------------------------------------------------Footer------------------------------------------------- */
 .footdes{
-    position: static;
+    position: relative;
     bottom:0;
     width:100%;
     height:350px;
