--- a/css/style.css
+++ b/css/style.css
@@ -196,13 +196,14 @@
 .product-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    margin-left: 15%;
+    margin-right: 15%;
     border-radius: 5px
 }
 
 .product-box {
     width: 24%; /* Adjust width as needed */
-    margin: 10px;
+    margin: 5px;
     background-color: #c6bcf78e;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
