--- a/css/style.css
+++ b/css/style.css
@@ -196,16 +196,16 @@
 .product-container {
     display: flex;
     flex-wrap: wrap;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 10%;
+    margin-right: 10%;
     border-radius: 5px
 }
 
 .product-box {
     width: 24%; /* Adjust width as needed */
-    margin: 5px;
+    margin: 3px;
     background-color: #c6bcf78e;
-    border-radius: 5px;
+    border-radius: 25px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     text-align: center; 
 }
@@ -262,7 +262,7 @@ img {
 /* Responsive layout for mobile (2 boxes per row) */
 @media only screen and (max-width: 768px) {
     .product-box {
-        width: 90%;
+        width: 100%;
     }
 }
 /* phone re */
@@ -342,7 +342,9 @@ img {
 /*------------------------------------------------Footer------------------------------------------------- */
 
 /* ----------------------------------- nav menu---------------------------------------------------------- */
-#menu-button {
+
+@media only screen and (max-width: 768px) {
+  #menu-button {
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -381,6 +383,7 @@ img {
     border: none;
     cursor: pointer;
     font-size: 20px;
+}
 }
 
 /* ----------------------------------- nav menu---------------------------------------------------------- */
@@ -446,3 +449,76 @@ p {
   }
 }
 /* Aboutus */
+
+/* Header */
+header {
+  background-color: #ffffff;
+  color: #000000;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+h1 {
+  font-size: 2em;
+  margin: 0;
+}
+
+nav {
+  display: flex;
+  list-style: none;
+}
+
+nav a {
+  color: inherit;
+  text-decoration: none;
+  padding: 10px 20px;
+}
+
+nav a:hover {
+  background-color: #ddd;
+}
+
+/* Responsive Styles */
+
+@media (max-width: 768px) {
+  nav {
+    display: none; /* Hide navigation bar on small screens */
+  }
+
+  .show {
+    display: block; /* Makes the navigation links visible */
+  }
+  
+
+  .menu-toggle {
+    display: block; /* Show menu toggle button on small screens */
+    padding: 10px;
+    cursor: pointer; /* Make it clickable */
+  }
+
+  .bar {
+    display: block; /* Show the bars for the menu toggle button */
+    width: 25px;
+    height: 3px;
+    background-color: #fff;
+    margin-bottom: 5px;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .menu-toggle.open .bar:first-child {
+    transform: rotate(45deg) translate(8px, 8px);
+  }
+
+  .menu-toggle.open .bar:last-child {
+    transform: rotate(-45deg) translate(8px, -8px);
+  }
+
+  .menu-toggle.open .bar:nth-child(2) {
+    opacity: 0;
+  }
+}
+
+
+/* header */
